# Dealbrain

./: README.md
dealbrain/: Dockerfile  main.py  pyproject.toml
dealbrain/agents/: financial_risk.py  manager.py  market_comps.py  regulatory.py  reporting.py  timeline.py
dealbrain/mcp_servers/calendar-mcp/: Dockerfile  calendar_server.py  requirements.txt
dealbrain/mcp_servers/gmail-mcp/: Dockerfile  gmail_server.py
dealbrain/test/: sample_ic_memo.html  test_calendar.sh  test_calendar_mcp.py  test_full_pipeline.py  test_gmail.sh  test_gmail_mcp.py
dealbrain/tools/: __init__.py  alloydb.py  calendar_mcp.py  document_parser.py  gmail_mcp.py
